<resources>
    <string name="app_name">Weather Application</string>
    <string name="email">Email</string>
    <string name="enter_city">Enter City</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="get_weather">Get Weather</string>
    <string name="signup">Signup</string>
</resources>